--- a/src/style.css
+++ b/src/style.css
@@ -996,6 +996,16 @@ button.active:hover {
     filter: brightness(1.2);
 }
 
+.legend-icon {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 2px;
+    margin-right: 6px;
+    vertical-align: middle;
+    border: 1px solid white;
+}
+
 /* ================================================================
    コピーボタン スタイル
    ================================================================ */
